# File_Manager

./: CMakeLists.txt  main2.cpp
src/: file_handler.h  main.cpp  thread_pool.h
